feat[SOLIDITY-PATH]: add result

--- a/zombie/01-solidity-path/01.md
+++ b/zombie/01-solidity-path/01.md
@@ -211,3 +211,6 @@ function generateZombie(id, name, dna) {
 }
 
 ```
+
+### Result
+![Screenshot 2022-09-01 at 15 27 40](https://user-images.githubusercontent.com/31156788/187868818-6991d3d2-132a-44bf-99e8-2a8aa58a47e4.png)
