--- a/zombie/01-solidity-path/02.md
+++ b/zombie/01-solidity-path/02.md
@@ -191,8 +191,8 @@ Solidity handles them by default except for struct and arrays within functions
 
 ### Interface
 Used to called another contract on blockchain
-1. bikin interface
-2. copy function yg mau dipake tanpa function body
+1. create new interface
+2. copy target function without the function body
 ```sol
 contract NumberInterface {
   function getNum(address _myAddress) public view returns (uint);
@@ -228,7 +228,6 @@ let zombieId = 1;
 let kittyId = 1;
 
 // To get the CryptoKitty's image, we need to query their web API. This
-// information isn't stored on the blockchain, just their webserver.
 // If everything was stored on a blockchain, we wouldn't have to worry
 // about the server going down, them changing their API, or the company 
 // blocking us from loading their assets if they don't like our zombie game ;)
