docs: fix typo on ch 3

--- a/zombie/01-solidity-path/03.md
+++ b/zombie/01-solidity-path/03.md
@@ -1,7 +1,8 @@
 # Advanced Solidity Concepts
 ### Immutability of contracts
-Once deployed can never be modified or updated again
-Normally, we have to tell user to start using a smart contract address for a fixes
+Once deployed can never be modified or updated again<br/>
+Normally, we have to tell user to start using a smart contract address for a fixes<br/>
+ETH merge is the sample, we create a new version, grant user with the old version updates (free new version)
 
 
 
@@ -128,7 +129,7 @@ Users buy gas with Ether (the currency on Ethereum), so your users have to spend
   
   - use minified uint with struct
       - NORMALLY there's NO BENEFIT to using these sub-types because Solidity reserves 256 bits of storage regardless of the uint size
-      - Using uint8 instead of uint (uint256) won't saveGa
+      - Using uint8 instead of uint (uint256) won't save gas
       - there's an exception to this: inside structs.
   - cluster identical data types together
       - put them next to each other in the struct) so that Solidity can minimize the required storage space.
