docs(SOLIDITY-PATH) - part 4

--- a/zombie/01-solidity-path/04.md
+++ b/zombie/01-solidity-path/04.md
@@ -1,53 +1,149 @@
-# Zombie Battle System
+# Zombie Battle System [⁉️]
+[⁉️] MIGHT CHANGE ON ETH 2.0 - PoW changed to PoS -- will revisit
 
+<details>
+<summary>Code</summary>
+
+zombieAttack.sol
+  ```sol
+  pragma solidity >=0.5.0 <0.6.0;
+
+  import "./zombiehelper.sol";
+
+  contract ZombieAttack is ZombieHelper {
+    uint randNonce = 0;
+    uint attackVictoryProbability = 70;
+
+    function randMod(uint _modulus) internal returns(uint) {
+      randNonce++;
+      return uint(keccak256(abi.encodePacked(now, msg.sender, randNonce))) % _modulus;
+    }
+
+    function attack(uint _zombieId, uint _targetId) external ownerOf(_zombieId) {
+      Zombie storage myZombie = zombies[_zombieId];
+      Zombie storage enemyZombie = zombies[_targetId];
+      uint rand = randMod(100);
+    }
+  }
+
+  ```
 zombieHelper.sol
-```sol
-pragma solidity >=0.5.0 <0.6.0;
+  ```sol
+    pragma solidity >=0.5.0 <0.6.0;
 
-import "./zombiefeeding.sol";
+    import "./zombiefeeding.sol";
 
-contract ZombieHelper is ZombieFeeding {
+    contract ZombieHelper is ZombieFeeding {
 
-  // 1. Define levelUpFee here
-  uint levelUpFee = 0.001 ether;
+      uint levelUpFee = 0.001 ether;
 
-  modifier aboveLevel(uint _level, uint _zombieId) {
-    require(zombies[_zombieId].level >= _level);
-    _;
-  }
+      modifier aboveLevel(uint _level, uint _zombieId) {
+        require(zombies[_zombieId].level >= _level);
+        _;
+      }
 
-  // 2. Insert levelUp function here
-  function levelUp (uint _zombieId) external payable {
-    require(msg.value == levelUpFee);
-    zombies[_zombieId].level++;
-  }
+      // 1. Create withdraw function here
+      function withdraw() external onlyOwner {
+        address payable _owner = address(uint160(owner()));
+        _owner.transfer(address(this).balance);
+      }
+      // 2. Create setLevelUpFee function here
+      function setLevelUpFee(uint _fee) external onlyOwner {
+        levelUpFee = _fee;
+      }
+      function levelUp(uint _zombieId) external payable {
+        require(msg.value == levelUpFee);
+        zombies[_zombieId].level++;
+      }
 
-  function changeName(uint _zombieId, string calldata _newName) external aboveLevel(2, _zombieId) {
-    require(msg.sender == zombieToOwner[_zombieId]);
-    zombies[_zombieId].name = _newName;
-  }
+      function changeName(uint _zombieId, string calldata _newName) external aboveLevel(2, _zombieId) {
+        require(msg.sender == zombieToOwner[_zombieId]);
+        zombies[_zombieId].name = _newName;
+      }
 
-  function changeDna(uint _zombieId, uint _newDna) external aboveLevel(20, _zombieId) {
-    require(msg.sender == zombieToOwner[_zombieId]);
-    zombies[_zombieId].dna = _newDna;
-  }
+      function changeDna(uint _zombieId, uint _newDna) external aboveLevel(20, _zombieId) {
+        require(msg.sender == zombieToOwner[_zombieId]);
+        zombies[_zombieId].dna = _newDna;
+      }
 
-  function getZombiesByOwner(address _owner) external view returns(uint[] memory) {
-    uint[] memory result = new uint[](ownerZombieCount[_owner]);
-    uint counter = 0;
-    for (uint i = 0; i < zombies.length; i++) {
-      if (zombieToOwner[i] == _owner) {
-        result[counter] = i;
-        counter++;
+      function getZombiesByOwner(address _owner) external view returns(uint[] memory) {
+        uint[] memory result = new uint[](ownerZombieCount[_owner]);
+        uint counter = 0;
+        for (uint i = 0; i < zombies.length; i++) {
+          if (zombieToOwner[i] == _owner) {
+            result[counter] = i;
+            counter++;
+          }
+        }
+        return result;
       }
     }
-    return result;
-  }
+  ```
+  zombiefeeding.sol
+  ```sol
+    pragma solidity >=0.5.0 <0.6.0;
 
-}
+    import "./zombiefactory.sol";
 
-```
+    contract KittyInterface {
+      function getKitty(uint256 _id) external view returns (
+        bool isGestating,
+        bool isReady,
+        uint256 cooldownIndex,
+        uint256 nextActionAt,
+        uint256 siringWithId,
+        uint256 birthTime,
+        uint256 matronId,
+        uint256 sireId,
+        uint256 generation,
+        uint256 genes
+      );
+    }
 
+    contract ZombieFeeding is ZombieFactory {
+      KittyInterface kittyContract;
+
+      // 1. Create modifier here
+      modifier ownerOf(uint _zombieId) {
+        require(msg.sender == zombieToOwner[_zombieId]);
+        _;
+      }
+
+      function setKittyContractAddress(address _address) external onlyOwner {
+        kittyContract = KittyInterface(_address);
+      }
+
+      function _triggerCooldown(Zombie storage _zombie) internal {
+        _zombie.readyTime = uint32(now + cooldownTime);
+      }
+
+      function _isReady(Zombie storage _zombie) internal view returns (bool) {
+          return (_zombie.readyTime <= now);
+      }
+
+      // 2. Add modifier to function definition:
+      function feedAndMultiply(uint _zombieId, uint _targetDna, string memory _species) internal ownerOf(_zombieId) {
+        // 3. Remove this line
+        Zombie storage myZombie = zombies[_zombieId];
+        require(_isReady(myZombie));
+        _targetDna = _targetDna % dnaModulus;
+        uint newDna = (myZombie.dna + _targetDna) / 2;
+        if (keccak256(abi.encodePacked(_species)) == keccak256(abi.encodePacked("kitty"))) {
+          newDna = newDna - newDna % 100 + 99;
+        }
+        _createZombie("NoName", newDna);
+        _triggerCooldown(myZombie);
+      }
+
+      function feedOnKitty(uint _zombieId, uint _kittyId) public {
+        uint kittyDna;
+        (,,,,,,,,,kittyDna) = kittyContract.getKitty(_kittyId);
+        feedAndMultiply(_zombieId, kittyDna, "kitty");
+      }
+    }
+
+  ```
+</details>
 ### Story so far
 - Visibility modifier (ctrl when & where function called)
   - Internal - itself + inheritors
@@ -67,7 +163,7 @@ contract ZombieHelper is ZombieFeeding {
   ```
 - payable 🆕
 
-### Payable
+## Payable
 - `msg.value` to see how much ether was sent to contract
 - `ether` built-in unit
 ```sol
@@ -98,3 +194,48 @@ OnlineStore.buySomething({from: web3.eth.defaultAccount, value: web3.utils.toWei
   <summary>What happened if that function is not marked payable?</summary>
   The transaction will be rejected if we sent ether without `payable` keywords
 </details>
+
+## Withdraw
+After you send Ether to a contract, it gets stored in the contract's Ethereum account, and it will be trapped there — unless you add a function to withdraw the Ether from the contract.
+
+- address type must be `payable`
+- ELSE, we cant transfer ether to that address
+
+```sol
+contract GetPaid is Ownable {
+  function withdraw() external onlyOwner {
+    address payable _owner = address(uint160(owner()));
+    _owner.transfer(address(this).balance);
+  }
+}
+
+```
+
+### Transfer
+Send funds to any eth address, e.g transferback an overpaid item
+It's just like marketplace that is not controlled by anyone
+```sol
+uint itemFee = 0.001 ether;
+msg.sender.transfer(msg.value - itemFee);
+```
+
+
+## Random Number
+### keccak256
+CONS: vulnerable to attack by dishonest node
+
+[⁉️] MIGHT CHANGE ON ETH 2.0 - PoW changed to PoS -- will revisit
+
+In Ethereum, when you call a function on a contract:
+1. You broadcast it to a node or nodes on the network as a transaction
+2. The nodes on the network then collect a bunch of transactions, try to be the first to solve a computationally-intensive mathematical problem as a "Proof of Work"
+3. Then publish that group of transactions along with their Proof of Work (PoW) as a block to the rest of the network.
+4. Once a node has solved the PoW, the other nodes:
+    -  stop trying to solve the PoW
+    - verify that the other node's list of transactions are valid
+    - accept the block and move on to trying to solve the next bloc
+
+Good reads on [security](https://ethereum.stackexchange.com/questions/191/how-can-i-securely-generate-a-random-number-in-my-smart-contract)
+
+### Oracles
+To access a random number function from outside of the Ethereum blockchain
