docs(FCC): fix typo on readme goals

--- a/fcc/03.md
+++ b/fcc/03.md
@@ -1,7 +1,7 @@
 
 # Lesson 3: Remix Storage Factory
 [source](https://www.youtube.com/watch?v=gyMwXuJrbJQ&t=11134s&ab_channel=freeCodeCamp.org)
-[ ] Importing Contracts into other Contracts
-[ ] Interacting with other contracts
-[ ] Inheritance & Overrides
-[ ] Lesson 3 Recap
+- [ ] Importing Contracts into other Contracts
+- [ ] Interacting with other contracts
+- [ ] Inheritance & Overrides
+- [ ] Lesson 3 Recap
