--- a/fcc/05.md
+++ b/fcc/05.md
@@ -1,24 +1,24 @@
 # Lesson 5: Ethers.js Simple 
 [source](https://www.youtube.com/watch?v=gyMwXuJrbJQ&t=19842s)
-[ ] Effective Debugging Stratetgies & Getting Help
-[ ] How to Debug Anything
-[ ] Installation & Setup - Moving to local development
-[ ] Windows Install
-[ ] Working with Gitpod
-[ ] Local Development Introduction
-[ ] Tiny Javascript Refresher
-[ ] Asynchronous programming in Javascript
-[ ] Compiling our Solidity
-[ ] Ganache & Networks
-[ ] Introduction to Ethers.js
-[ ] A note on the await keyword
-[ ] Adding Transaction Overrides
-[ ] Transaction Receipts
-[ ] Sending a "raw transaction in ethersjs
-[ ] Interacting with Contracts in Ethersjs
-[ ] Environment Variables
-[ ] Optional Prettier Formatting
-[ ] Deploying to a Testnet or a Mainnet
-[ ] Verifying on Block Explorers (From the UI)
-[ ] Lesson 5 Recap
-[ ] Optional: Typescript
+- [ ] Effective Debugging Stratetgies & Getting Help
+- [ ] How to Debug Anything
+- [ ] Installation & Setup - Moving to local development
+- [ ] Windows Install
+- [ ] Working with Gitpod
+- [ ] Local Development Introduction
+- [ ] Tiny Javascript Refresher
+- [ ] Asynchronous programming in Javascript
+- [ ] Compiling our Solidity
+- [ ] Ganache & Networks
+- [ ] Introduction to Ethers.js
+- [ ] A note on the await keyword
+- [ ] Adding Transaction Overrides
+- [ ] Transaction Receipts
+- [ ] Sending a "raw transaction in ethersjs
+- [ ] Interacting with Contracts in Ethersjs
+- [ ] Environment Variables
+- [ ] Optional Prettier Formatting
+- [ ] Deploying to a Testnet or a Mainnet
+- [ ] Verifying on Block Explorers (From the UI)
+- [ ] Lesson 5 Recap
+- [ ] Optional: Typescript
