--- a/fcc/08.md
+++ b/fcc/08.md
@@ -1,13 +1,13 @@
 # Lesson 8: HTML / Javascript Fund Me (Full Stack / Front End)
 [source](https://www.youtube.com/watch?v=gyMwXuJrbJQ&t=43200s&ab_channel=freeCodeCamp.org)
-[ ] HTML Setup
-[ ] Connecting HTML to Metamask
-[ ] javascript in its own file
-[ ] ES6 (Front End JS) vs NodeJS
-[ ] Sending a Transaction from a Website
-[ ] Resetting an account in Metamask
-[ ] Listening for events and Completed Transactions
-[ ] Input Forms
-[ ] Reading from the Blockchain
-[ ] Withdraw Function
-[ ] Lesson 8 Recap
+- [ ] HTML Setup
+- [ ] Connecting HTML to Metamask
+- [ ] javascript in its own file
+- [ ] ES6 (Front End JS) vs NodeJS
+- [ ] Sending a Transaction from a Website
+- [ ] Resetting an account in Metamask
+- [ ] Listening for events and Completed Transactions
+- [ ] Input Forms
+- [ ] Reading from the Blockchain
+- [ ] Withdraw Function
+- [ ] Lesson 8 Recap
