--- a/fcc/09.md
+++ b/fcc/09.md
@@ -1,35 +1,35 @@
 # Lesson 9 Hardhat Smart Contract Lottery
 [source](https://www.youtube.com/watch?v=gyMwXuJrbJQ&t=43200s)
-[ ] Hardhat Setup
-[ ] Raffle.sol Setup
-[ ] Introduction to Events
-[ ] Events in Raffle.sol
-[ ] Introduction to Chainlink VRF (Randomness in Web3)
-[ ] Implementing Chainlink VRF (Introduction)
-[ ] Hardhat Shorthand
-[ ] Implementing Chainlink VRF - The Request
-[ ] Implementing Chainlink VRF - The Fulfill (Modulo)
-[ ] Implementing Chainlink VRF - The Fulfill (continued)
-[ ] Introduction to Chainlink Keepers
-[ ] Implementing Chainlink Keepers (checkUpKeep)
-[ ] Enums
-[ ] Implementing Chainlink Keepers (checkUpKeep- continued)
-[ ] Implementing Chainlink Keepers (performUpKeep)
-[ ] Code CleanUp
-[ ] Deploying Raffle.sol
-[ ] Deploying Raffle.sol (Mock Chainlink VRF Coordinator)
-[ ] Deploying Raffle.sol - continued
-[ ] Raffle.sol Unit Tests
-[ ] Testing Events & Chai Matchers
-[ ] Raffle.sol unit Tests Continued
-[ ] Hardhat Methods & "Time Travel"
-[ ] Raffle.sol unit Tests Continued II
-[ ] Callstatic
-[ ] Raffle.sol unit Tests Continued III
-[ ] Massive Promise Test
-[ ] Fixing spelling error and Run Tests
-[ ] Raffle.sol unit Tests  Continued IV
-[ ] Raffle.sol Staging Tests
-[ ] Testing on a Testnet
-[ ] Smart Contract Lottery Conclusion
-[ ] Typescript
+- [ ] Hardhat Setup
+- [ ] Raffle.sol Setup
+- [ ] Introduction to Events
+- [ ] Events in Raffle.sol
+- [ ] Introduction to Chainlink VRF (Randomness in Web3)
+- [ ] Implementing Chainlink VRF (Introduction)
+- [ ] Hardhat Shorthand
+- [ ] Implementing Chainlink VRF - The Request
+- [ ] Implementing Chainlink VRF - The Fulfill (Modulo)
+- [ ] Implementing Chainlink VRF - The Fulfill (continued)
+- [ ] Introduction to Chainlink Keepers
+- [ ] Implementing Chainlink Keepers (checkUpKeep)
+- [ ] Enums
+- [ ] Implementing Chainlink Keepers (checkUpKeep- continued)
+- [ ] Implementing Chainlink Keepers (performUpKeep)
+- [ ] Code CleanUp
+- [ ] Deploying Raffle.sol
+- [ ] Deploying Raffle.sol (Mock Chainlink VRF Coordinator)
+- [ ] Deploying Raffle.sol - continued
+- [ ] Raffle.sol Unit Tests
+- [ ] Testing Events & Chai Matchers
+- [ ] Raffle.sol unit Tests Continued
+- [ ] Hardhat Methods & "Time Travel"
+- [ ] Raffle.sol unit Tests Continued II
+- [ ] Callstatic
+- [ ] Raffle.sol unit Tests Continued III
+- [ ] Massive Promise Test
+- [ ] Fixing spelling error and Run Tests
+- [ ] Raffle.sol unit Tests  Continued IV
+- [ ] Raffle.sol Staging Tests
+- [ ] Testing on a Testnet
+- [ ] Smart Contract Lottery Conclusion
+- [ ] Typescript
