--- a/fcc/10.md
+++ b/fcc/10.md
@@ -1,26 +1,26 @@
 # Lesson 10 NextJS Smart Contract Lottery (Full Stack / Front End)
 [source](https://www.youtube.com/watch?v=gyMwXuJrbJQ&t=43200s)
-[ ] NextJS setup
-[ ] Manual Header I
-[ ] React Hooks
-[ ] Manual Header II
-[ ] useEffect Hook
-[ ] Local Storage
-[ ] isWeb3Enable Loading
-[ ] web3uikit
-[ ] Introduction to Calling Functions in NextJS
-[ ] Automatic Constant Value UI Updater
-[ ] runContractFunction
-[ ] useState
-[ ] Calling Functions in NextJS
-[ ] useNotification
-[ ] Reading & Displaying Contract Data
-[ ] A note about onSuccess
-[ ] A Challenge to You
-[ ] Tailwind & Styling
-[ ] Introduction to Hosting your site
-[ ] IPFS
-[ ] Hosting on IPFS
-[ ] Hosting on IPFS & Filecoin using Fleek
-[ ] Filecoin Overview
-[ ] Lesson 10 Recap
+- [ ] NextJS setup
+- [ ] Manual Header I
+- [ ] React Hooks
+- [ ] Manual Header II
+- [ ] useEffect Hook
+- [ ] Local Storage
+- [ ] isWeb3Enable Loading
+- [ ] web3uikit
+- [ ] Introduction to Calling Functions in NextJS
+- [ ] Automatic Constant Value UI Updater
+- [ ] runContractFunction
+- [ ] useState
+- [ ] Calling Functions in NextJS
+- [ ] useNotification
+- [ ] Reading & Displaying Contract Data
+- [ ] A note about onSuccess
+- [ ] A Challenge to You
+- [ ] Tailwind & Styling
+- [ ] Introduction to Hosting your site
+- [ ] IPFS
+- [ ] Hosting on IPFS
+- [ ] Hosting on IPFS & Filecoin using Fleek
+- [ ] Filecoin Overview
+- [ ] Lesson 10 Recap
