--- a/fcc/01.md
+++ b/fcc/01.md
@@ -1,8 +1,7 @@
 # Blockchain Basic
-[ ] Purpose of smart contracts
-[ ] Your first transactions
-[ ] Gas I: intro to gas
-[ ] How do blockchain works
-[ ] Signing Transactions
-[ ] Gas II: Block rewards & EIP 1559
-[ ] High-level blockchain fundamental 
+- [ ] Purpose of smart contracts
+- [ ] Gas I: intro to gas
+- [ ] How do blockchain works
+- [ ] Signing Transactions
+- [ ] Gas II: Block rewards & EIP 1559
+- [ ] High-level blockchain fundamental 
