--- a/fcc/13.md
+++ b/fcc/13.md
@@ -1,13 +1,13 @@
 
 # Lesson 13: Hardhat DeFi & Aave
 [source](https://www.youtube.com/watch?v=gyMwXuJrbJQ&t=43200s)
-[ ] what is DeFi?
-[ ] What is Aave?
-[ ] Programatic Borrowing & Lending
-[ ] WETH Wrapped ETH
-[ ] Forking Mainnet
-[ ] Depositing into Aave
-[ ] Borrowing from Aave
-[ ] Repaying with Aave
-[ ] Visualizing the Transactions (And aTokens)
-[ ] Recap lesson 13
+- [ ] what is DeFi?
+- [ ] What is Aave?
+- [ ] Programatic Borrowing & Lending
+- [ ] WETH Wrapped ETH
+- [ ] Forking Mainnet
+- [ ] Depositing into Aave
+- [ ] Borrowing from Aave
+- [ ] Repaying with Aave
+- [ ] Visualizing the Transactions (And aTokens)
+- [ ] Recap lesson 13
